add Footer section

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
     font-family: 'Nunito', sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
-    /* text-transform: capitalize; */
     outline: none; border:none;
     text-decoration: none;
     transition: all .2s linear;
@@ -62,29 +61,6 @@ section{
     color:var(--orange);
 }
 
-header{
-    position: fixed;
-    top:0; left: 0; right:0;
-    background:#333;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding:2rem 4%;
-
-}
-
-header .logo{
-    font-size: 2.5rem;
-    font-weight: bolder;
-    color:#fff;
-    text-transform: uppercase;
-}
-
-header .logo span{
-    color:var(--orange);
-}
-
 header .navbar a{
     color:#fff;
     font-size: 2rem;
@@ -94,10 +70,6 @@ header .navbar a{
 /* header .navbar div ul li a:hover{
     color:var(--orange);
 } */
-/* li a:hover{
-    color: aqua;
-} */
-
 li:hover{
     background-color: cornflowerblue;
 }
@@ -109,136 +81,6 @@ header .icons i{
     margin-right: 2rem;
 }
  */
-
-/* header .icons i:hover{
-    color:var(--orange);
-} */
-
-/* header .search-bar-container{
-    position: absolute;
-    top:100%; left: 0; right:0;
-    padding:1.5rem 2rem;
-    background:#333;
-    border-top: .1rem solid rgba(255,255,255,.2);
-    display: flex;
-    align-items: center;
-    z-index: 1001;
-    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-}
-
-header .search-bar-container.active{
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-}
-
-header .search-bar-container #search-bar{
-    width:100%;
-    padding:1rem;
-    text-transform: none;
-    color:#333;
-    font-size: 1.7rem;
-    border-radius: .5rem;
-}
-
-header .search-bar-container label{
-    color:#fff;
-    cursor: pointer;
-    font-size: 3rem;
-    margin-left: 1.5rem;
-}
-
-header .search-bar-container label:hover{
-    color:var(--orange);
-} */
-/* #login-btn, #signup-btn{
-    font-size: 2rem;
-} */
-/* header #login-btn:hover,header #signup-btn:hover{
-    margin-left: 1rem;
-    padding-left: 1rem;
-    color:#ecb62f;
-
-} */
-/* .login-form-container, .signup-form-container{
-    position: fixed;
-    top:-120%; left: 0;
-    z-index: 10000;
-    min-height: 100vh;
-    width:100%;
-    background:rgba(0,0,0,.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
-/* .login-form-container.active,.signup-form-container.active{
-    top:0;
-} */
-
-/* .login-form-container form, .signup-form-container form{
-    margin:2rem;
-    padding:1.5rem 2rem;
-    border-radius: .5rem;
-    background:#fff;
-    width:50rem;
-}
-
-.login-form-container form h3, .signup-form-container form h3{
-    font-size: 3rem;
-    color:#444;
-    text-transform: uppercase;
-    text-align: center;
-    padding:1rem 0;
-}
-
-.login-form-container form .box,.signup-form-container form .box{
-    width:100%;
-    padding:1rem;
-    font-size: 1.7rem;
-    color:#333;
-    margin:.6rem 0;
-    border:.1rem solid rgba(0,0,0,.3);
-    text-transform: none;
-}
-
-.login-form-container form .box:focus, .signup-form-container form .box:focus{
-    border-color: var(--orange);;
-}
-
-.login-form-container form #remember{
-    margin:2rem 0;
-}
-
-.login-form-container form label{
-    font-size: 1.5rem;
-}
-
-.login-form-container form .btn, .signup-form-container form .btn{
-    display: block;
-    width:100%;
-}
-
-.login-form-container form p,.signup-form-container form p{
-    padding:.5rem 0;
-    font-size: 1.5rem;
-    color:#666;
-}
-
-.login-form-container form p a, .signup-form-container form p a{
-    color:var(--orange);
-}
-
-.login-form-container form p a:hover, .signup-form-container form p a:hover{
-    color:#333;
-    text-decoration: underline;
-}
-
-.login-form-container #form-close, .signup-form-container #signup-close{
-    position: absolute;
-    top:2rem; right:3rem;
-    font-size: 5rem;
-    color:#fff;
-    cursor: pointer;
-} */
 
 /* #menu-bar{
     color:#fff;
@@ -562,9 +404,10 @@ header .search-bar-container label:hover{
     width:100%;
 } 
 
+
 /* .brand-container{
     text-align: center;
-}
+} */
 
 .footer{
     background:#333;
@@ -578,34 +421,45 @@ header .search-bar-container label:hover{
 
 .footer .box-container .box{
     padding:1rem 0;
-    flex:1 1 25rem;
+    flex:2 2 18rem;
 }
 
 .footer .box-container .box h3{
-    font-size: 2.5rem;
     padding:.7rem 0;
     color:#fff;
 }
 
 .footer .box-container .box p{
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     padding:.7rem 0;
     color:#eee;
 }
 
 .footer .box-container .box a{
     display: block;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     padding:.7rem 0;
     color:#eee;
 }
 
 .footer .box-container .box a:hover{
-    color:var(--orange);
+    color:var(--pink);
     text-decoration: underline;
 }
+.footer .box-container .box i{
+    font-size:3rem;
+    /* color:var(--orange); */
+    color: crimson;
+}
+.footer .box-container .box i:hover{
+    font-size:3rem;
+    /* color:var(--orange); */
+    color: var(--pink);
+}
 
-.footer .credit{
+
+
+/* .footer .credit{
     text-align: center;
     padding:2rem 1rem;
     margin-top: 1rem;
@@ -613,9 +467,9 @@ header .search-bar-container label:hover{
     font-weight: normal;
     color:#fff;
     border-top: .1rem solid rgba(255,255,255,.2);
-}
+} */
 
-.footer .credit span{
+/* .footer .credit span{
     color:var(--orange);
 } */
 
@@ -668,14 +522,3 @@ header .search-bar-container label:hover{
 
 /* } */
 
-/* @media (max-width:450px){
-
-    html{
-        font-size: 50%;
-    }
-
-    .contact .row form .inputBox input{
-        width:100%;
-    }
-
-} */
