--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
 }
 
 html{
-    /* font-size: 62.5%; */
     overflow-x: hidden;
     scroll-padding-top: 6rem;
     scroll-behavior: smooth;
@@ -56,9 +55,6 @@ section{
 }
 
 
-/* header .navbar div ul li a:hover{
-    color:var(--orange);
-} */
 li:hover{
     background-color: cornflowerblue;
 }
@@ -86,308 +82,12 @@ li:hover{
 .h_iframe-aparat_embed_frame iframe{
     position:absolute;
     top:0;
-    left:0;
-    width:100%;
-    height:100%;
-}
-
-/*
-header .icons i{
-    font-size: 2.5rem;
-    color:#fff;
-    cursor: pointer;
-    margin-right: 2rem;
-}
- */
-
-/* #menu-bar{
-    color:#fff;
-    border:.1rem solid #fff;
-    border-radius: .5rem;
-    font-size: 3rem;
-    padding:.5rem 1.2rem;
-    cursor: pointer;
-    display: none;
-}
-
-.home{
-    background: url(assets/banner-bg.jpg) no-repeat center;
-    background-size: cover;
-    margin-top:13rem;
-    height:100%;
-}
-
-.home .row{
-    display:flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap:1.5rem;
-}
-
-.home .row .content{
-    flex:1 1 42rem;
-}
-
-.home .row .books-slider{
-    flex:1 1 42rem;
-    text-align: center;
-    margin-top: 2rem;
-}
-
-.home .row .books-slider a img{
-    height: 23rem;
-    transform: scale(.7);
-}
-
-.home .row .books-slider a:hover img{
-    transform: scale(.9);
-}
-
-.home .row .books-slider .stand{
-    width:100%;
-    margin-top: -2rem;
-}
-
-.home .row .content h3{
-    color:var(--black);
-    font-size: 4.5rem;
-}
-
-.home .row .content p{
-    color:var(--light-color);
-    font-size: 1.4rem;
-    line-height: 2;
-    padding:1rem 0;
+    left:5%;
+    width:90%;
+    height:90%;
 }
 
 
-.book .row{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-    align-items: center;
-}
-
-.book .row .image{
-    flex:1 1 40rem;
-}
-
-.book .row .image img{
-    width:100%;
-}
-
-.book .row form{
-    flex:1 1 40rem;
-    padding:2rem;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-    border-radius: .5rem;
-}
-
-.book .row form .inputBox{
-    padding:.5rem 0;
-}
-
-.book .row form .inputBox input{
-    width:100%;
-    padding:1rem;
-    border:.1rem solid rgba(0,0,0,.1);
-    font-size: 1.7rem;
-    color:#333;
-    text-transform: none;
-}
-
-.book .row form .inputBox h3{
-    font-size: 2rem;
-    padding:1rem 0;
-    color:#666;
-}
-
-.packages .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap:2rem;
-}
-
-.packages .box-container .box{
-    flex:1 1 30rem;
-    border-radius: .5rem;
-    overflow: hidden;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-}
-
-.packages .box-container .box img{
-    height: 25rem;
-    width:100%;
-    object-fit: cover;
-}
-
-.packages .box-container .box .content{
-    padding:2rem;
-}
-
-.packages .box-container .box .content h3{
-    font-size:2rem;
-    color:#333;
-}
-
-.packages .box-container .box .content h3 i{
-    color:var(--orange);
-}
-
-.packages .box-container .box .content p{
-    font-size:1.7rem;
-    color:#666;
-    padding:1rem 0;
-}
-
-.packages .box-container .box .content .stars i{
-    font-size:1.7rem;
-    color:var(--orange);
-}
-
-.packages .box-container .box .content .price{
-    font-size: 2rem;
-    color:#333;
-    padding-top: 1rem;
-}
-
-.packages .box-container .box .content .price span{
-    color:#666;
-    font-size: 1.5rem;
-    text-decoration: line-through;
-}
-
-.services .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-}
-
-.services .box-container .box{
-    flex: 1 1 30rem;
-    border-radius: .5rem;
-    padding:1rem;
-    text-align: center;
-}
-
-.services .box-container .box i{
-    padding:1rem;
-    font-size: 5rem;
-    color:var(--orange);
-}
-
-.services .box-container .box h3{
-    font-size: 2.5rem;
-    color:#333;
-}
-
-.services .box-container .box p{
-    font-size: 1.5rem;
-    color:#666;
-    padding:1rem 0;
-}
-
-.services .box-container .box:hover{
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-}
-
-.gallery .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-}
-
-.gallery .box-container .box{
-    overflow: hidden;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-    border:1rem solid #fff;
-    border-radius: .5rem;
-    flex:1 1 30rem;
-    height: 25rem;
-    position: relative;
-}
-
-.gallery .box-container .box img{
-    height: 100%;
-    width:100%;
-    object-fit: cover;
-}
-
-.gallery .box-container .box .content{
-    position: absolute;
-    top:-100%; left:0;
-    height: 100%;
-    width:100%;
-    text-align: center;
-    background:rgba(0,0,0,.7);
-    padding:2rem;
-    padding-top: 5rem;
-}
-
-.gallery .box-container .box:hover .content{
-    top:0;
-}
-
-.gallery .box-container .box .content h3{
-    font-size: 2.5rem;
-    color:var(--orange);
-}
-
-.gallery .box-container .box .content p{
-    font-size: 1.5rem;
-    color:#eee;
-    padding:.5rem 0;
-}
-
-.review .review-slider{
-    padding-bottom: 2rem;
-}
-
-.review .box{
-    padding:2rem;
-    text-align: center;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-    border-radius: .5rem;
-}
-
-.review .box img{
-    height:13rem;
-    width:13rem;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 1rem;
-}
-
-.review .box h3{
-    color:#333;
-    font-size: 2.5rem;
-}
-
-.review .box p{
-    color:#666;
-    font-size: 1.5rem;
-    padding:1rem 0;
-}
-
-.review .box .stars i{
-    color:var(--orange);
-    font-size: 1.7rem;
-} 
-
-.contact .row{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-    align-items: center;
-}
-
-.contact .row .image{
-    flex:1 1 35rem;
-}
-
-.contact .row .image img{
-    width:100%;
-} */
 .contact .row .info{
     padding:2rem;
     box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
@@ -422,10 +122,6 @@ header .icons i{
     width:100%;
 } 
 
-
-/* .brand-container{
-    text-align: center;
-} */
 
 .footer{
     background:#333;
@@ -466,77 +162,9 @@ header .icons i{
 }
 .footer .box-container .box i{
     font-size:3rem;
-    /* color:var(--orange); */
     color: crimson;
 }
 .footer .box-container .box i:hover{
     font-size:3rem;
-    /* color:var(--orange); */
     color: var(--pink);
 }
-
-
-
-/* .footer .credit{
-    text-align: center;
-    padding:2rem 1rem;
-    margin-top: 1rem;
-    font-size: 2rem;
-    font-weight: normal;
-    color:#fff;
-    border-top: .1rem solid rgba(255,255,255,.2);
-} */
-
-/* .footer .credit span{
-    color:var(--orange);
-} */
-
-/* @media (max-width:1200px){
-
-    html{
-        font-size: 55%;
-    }
-
-} 
-
-@media (max-width:991px){
-
-    header{
-        padding:2rem;
-    }
-
-    section{
-        padding:2rem;
-    }
-
-} */
-
-/* @media (max-width:768px){
-
-    #menu-bar{
-        display: initial;
-    }
- */
-    /* header .navbar{
-        position: absolute;
-        top:100%; right:0; left: 0;
-        background: #333;
-        border-top: .1rem solid rgba(255,255,255,.2);
-        padding:1rem 2rem;
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-    } */
-
-    /* header .navbar.active{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    } */
-
-    /* header .navbar a{
-        display: block;
-        border-radius: .5rem;
-        padding:1.5rem;
-        margin:1.5rem 0;
-        background:#222;
-    } */
-
-/* } */
-
